Corrigido algumas strings